[package]
name = "paper"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
color-eyre = "0.6.3"
itertools = "0.13.0"

tracing = { version = "0.1", features = [
    "std",
], default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], default-features = false, optional = true }
tracing-error = { version = "0.2", default-features = false, optional = true }
paranoid-android = { version = "0.2", optional = true }

[dev-dependencies]
cbindgen = "0.27"
tracing-test = "0.2.5"

[workspace]
members = ["questloader", "scotland2"]

[lib]
name = "paper2"

[features]
default = [
    "global_log",
    "context_log",
    "ffi",
    "backtrace",
    "file",
    "sinks",
    "logcat",
]
global_log = []
context_log = []
ffi = []
backtrace = []

sinks = []
file = []
logcat = []
stdout = []

tracing = [
    "dep:tracing",
    "dep:tracing-error",
    "dep:tracing-subscriber",
    "dep:paranoid-android",
]

# android specific features
[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.6"


[target.'cfg(target_os = "android")'.features]
default = ["logcat"]