[package]
name = "paper2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["questloader", "scotland2"]

[lib]
name = "paper2"
crate-type = ["cdylib", "staticlib", "lib"]

[[bench]]
name = "logger_bench"
harness = false

[dependencies]
cfg-if = "1"
itertools = "0.14"

tracing = { version = "0.1", features = [
    "std",
], default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], default-features = false, optional = true }
tracing-error = { version = "0.2", default-features = false, optional = true }
paranoid-android = { version = "0.2", optional = true }
chrono = "0.4"
thiserror = "2.0"
rustc-hash = "2.1.1"

[dev-dependencies]
tracing-test = "0.2.5"
color-eyre = "0.6"
criterion = "0.7"


[build-dependencies]
cbindgen = { version = "0.28", default-features = false }


[features]
default = [
    "global_log",
    "context_log",
    "ffi",
    "backtrace",
    "file",
    "sinks",
    "logcat",
]
android-api-30 = []
global_log = []
context_log = []
ffi = []
backtrace = []

sinks = []
file = []
logcat = []
stdout = []

tracing = [
    "dep:tracing",
    "dep:tracing-error",
    "dep:tracing-subscriber",
    "dep:paranoid-android",
]

# android specific features
[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.6"


[profile.release]
opt-level = 3
lto = true
debug = "full"
# strip = "symbols"
